hw_05/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus-ingress
    namespace: monitoring
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.homework
      http:
        paths:
          - path: /(|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-svc
                port:
                  number: 9090
